Fixing page on safari and making menu fixed

--- a/public_html/wp-content/themes/thezetter-2023/src/sass/base/_base-styles.scss
+++ b/public_html/wp-content/themes/thezetter-2023/src/sass/base/_base-styles.scss
@@ -39,6 +39,8 @@ body {
     //height: 100%;
     min-height: 100svh;
     width: 100%;
+    overflow-y: auto !important;
+    overflow-x: hidden !important;
 }
 
 body {
