--- a/public_html/wp-content/themes/thezetter-2023/src/sass/layout/_header_3.scss
+++ b/public_html/wp-content/themes/thezetter-2023/src/sass/layout/_header_3.scss
@@ -50,6 +50,10 @@ section:last-of-type{
         background: $color-background;
     }
 
+    &.scrolled{
+        position: fixed;
+        @extend %transition;
+    }
     .header-right{
         .locations-drop-down{
             a{
